Selection controls in the text area on mobile overlap the formatting menu. To solve this problem, we clear the user's selection and recreate it programmatically.

--- a/src/ui/control/richtexteditor/formatting-menu/FormattingMenuButton.css
+++ b/src/ui/control/richtexteditor/formatting-menu/FormattingMenuButton.css
@@ -5,6 +5,6 @@
 
 @media only screen and (max-width: 575px) {
     .formatting-menu {
-        max-height: 25vh;
+        max-height: 30.7vh;
     }
 }
